# euler

./: .gitignore  pyproject.toml  readme.md
lib/: utils.py
notebooks/: p000.ipynb  p001.ipynb  p002.ipynb  p003.ipynb  p004.ipynb  p005.ipynb  p006.ipynb  p007.ipynb  p008.ipynb  p009.ipynb  p010.ipynb  p011.ipynb
syntax/: usos_especiales.py
tests/: usos_especiales.py
