[build-system]
requires = ["setuptools>=82"]
build-backend = "setuptools.build_meta"

[project]
name = "euler"
version = "1.0.0"
description = "Repositorio personal para resolver Project Euler con notebooks y enfoque matematico estructurado."
readme = "readme.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel",
    "jupyterlab",
    "matplotlib",
]

[project.optional-dependencies]
desarrollo = [
    "pytest",
]
